# Fstudents-

./: .env  .gitignore  IMS software architecture.md  IMS_RESTFull_API_Spec.yaml  IMS_db_design.dbml  Inventory Management System (v0.1).md  README.md  redis.conf
backend/: .env  README.md  compose.yaml  postgresql.conf  pyproject.toml  redis.conf  requirements.txt
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  logger.py
backend/app/dependencies/: auth_deps.py  cache.py  database.py
backend/app/models/: __init__.py  base.py  category.py  product.py  product_inventory.py  purchase_order.py  stock_movement.py  supplier.py  user.py
backend/app/repositories/: __init__.py  category_repository.py  product_inventory_repository.py  product_repository.py  purchase_order_item_repository.py  purchase_order_repository.py  reset_password_repository.py  stock_adjustment_repository.py  stock_movement_repository.py  supplier_repository.py  user_repository.py  user_session_repository.py
backend/app/routes/: auth_routes.py
backend/app/schemas/: __init__.py  enums.py  shared.py
backend/app/schemas/params/: inventory_params.py
backend/app/schemas/requests/: auth_requests.py  category_requests.py  inventory_requests.py  product_requests.py  purchase_order_requests.py  stock_requests.py  supplier_requests.py  user_requests.py
backend/app/schemas/responses/: auth_responses.py  (+8 more)
backend/app/services/: auth_service.py
backend/init-scripts/: 01-extensions.sql  database_design.sql  database_design_test.sql  demo_data.sql
(+45 files in other folders)
