[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "IMS"
version = "0.1.0"
description = "FastAPI backend service"
requires-python = ">=3.10"

dependencies = [
    # Core
    "fastapi[standard]==0.115.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.1.0",
    "pydantic[email]",

    # Database / ORM
    "sqlalchemy==2.0.23",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "redis==5.0.8",

    # Async / HTTP
    "anyio==4.0.0",
    "httpx==0.25.1",

    # Security
    "python-jose[cryptography]==3.4.0",
    "argon2-cffi==25.1.0",
    "cryptography==41.0.7",

    # Logging
    "structlog==24.4.0",

    # API / Server
    "python-multipart==0.0.7",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]

dev = [
    "ipython==8.18.1",
    "python-dotenv==1.0.0",
    "watchfiles==0.21.0",
]

test = [
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-benchmark==4.0.0",
    "pytest-mock==3.12.0",
    "factory-boy==3.3.0",
    "Faker==38.2.0",
]

[tool.setuptools]
# Explicitly tell Python which directories are the packages
packages = ["tests", "app"]

